# ai-engineering-core-track

./: .gitignore  ai-concept.md  pyproject.toml  requirements.txt
w01/: lecture01.ipynb  lecture02.ipynb  scraper_v1.py  scraper_v2.py
