[project]
name = "ai-engineering-core-track"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "anthropic",
    "beautifulsoup4",
    "chromadb",
    "datasets",
    "feedparser",
    "google-genai",
    "google-generativeai",
    "gradio",
    "ipykernel",
    "ipywidgets",
    "jupyter-dash",
    "langchain",
    "langchain-chroma",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langchain-text-splitters",
    "litellm",
    "matplotlib",
    "nbformat",
    "modal",
    "numpy",
    "ollama",
    "openai",
    "pandas",
    "plotly",
    "protobuf",
    "psutil",
    "pydub",
    "python-dotenv",
    "requests",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "setuptools",
    "speedtest-cli",
    "tiktoken",
    "torch",
    "tqdm",
    "transformers",
    "wandb",
    "langchain-huggingface",
    "langchain-ollama",
    "langchain-anthropic",
    "langchain-experimental",
]

[tool.uv]
upgrade = true
